@@ -29,7 +29,7 @@
 
 // define render case
 #define SUBTEXEL
-#define INVERSE_W
+//#define INVERSE_W
 
 #define USE_ZBUFFER
 #define USE_SBUFFER
@@ -85,10 +85,15 @@ public:
 
 	//! draws an indexed triangle list
 	virtual void drawTriangle ( const s4DVertex *a,const s4DVertex *b,const s4DVertex *c );
-
+	virtual void setParam ( u32 index, f32 value);
 
 private:
-	void scanline ();
+	// fragment shader
+	typedef void (CTRStencilShadow::*tFragmentShader) ();
+	void fragment_zfail_decr ();
+	void fragment_zfail_incr ();
+
+	tFragmentShader fragmentShader;
 
 	sScanConvertData scan;
 	sScanLineData line;
@@ -108,9 +113,30 @@ CTRStencilShadow::CTRStencilShadow(CBurningVideoDriver* driver)
 
 /*!
 */
-void CTRStencilShadow::scanline ()
+void CTRStencilShadow::setParam ( u32 index, f32 value)
 {
-	tVideoSample *dst;
+	u32 val = (u32) value;
+
+	
+	// glStencilOp (fail,zfail,zpass
+	if ( index == 1 && val == 1 )
+	{
+		fragmentShader = &CTRStencilShadow::fragment_zfail_incr;
+	}
+	else
+	if ( index == 1 && val == 2 )
+	{
+		fragmentShader = &CTRStencilShadow::fragment_zfail_decr;
+	}
+
+
+}
+
+/*!
+*/
+void CTRStencilShadow::fragment_zfail_decr ()
+{
+	//tVideoSample *dst;
 
 #ifdef USE_ZBUFFER
 	fp24 *z;
@@ -204,7 +230,7 @@ void CTRStencilShadow::scanline ()
 #endif
 #endif
 
-	dst = (tVideoSample*)RenderTarget->lock() + ( line.y * RenderTarget->getDimension().Width ) + xStart;
+	//dst = (tVideoSample*)RenderTarget->lock() + ( line.y * RenderTarget->getDimension().Width ) + xStart;
 
 #ifdef USE_ZBUFFER
 	z = (fp24*) DepthBuffer->lock() + ( line.y * RenderTarget->getDimension().Width ) + xStart;
@@ -230,24 +256,167 @@ void CTRStencilShadow::scanline ()
 		if ( line.z[0] < z[i] )
 #endif
 #ifdef CMP_W
-		if ( line.w[0] >= z[i] )
+		if ( line.w[0] < z[i] )
 #endif
 		{
+			// zfail
+			stencil[i] -= 1;
+		}
+
+#ifdef IPOL_Z
+		line.z[0] += slopeZ;
+#endif
+#ifdef IPOL_W
+		line.w[0] += slopeW;
+#endif
+#ifdef IPOL_C0
+		line.c[0][0] += slopeC[0];
+#endif
+#ifdef IPOL_T0
+		line.t[0][0] += slopeT[0];
+#endif
+#ifdef IPOL_T1
+		line.t[1][0] += slopeT[1];
+#endif
+#ifdef IPOL_T2
+		line.t[2][0] += slopeT[2];
+#endif
+#ifdef IPOL_L0
+		line.l[0][0] += slopeL[0];
+#endif
+	}
+
+}
+
+/*!
+*/
+void CTRStencilShadow::fragment_zfail_incr ()
+{
+	//tVideoSample *dst;
+
+#ifdef USE_ZBUFFER
+	fp24 *z;
+#endif
+
+#ifdef USE_SBUFFER
+	u32 *stencil;
+#endif
+
+	s32 xStart;
+	s32 xEnd;
+	s32 dx;
+
+
+#ifdef SUBTEXEL
+	f32 subPixel;
+#endif
+
+#ifdef IPOL_Z
+	f32 slopeZ;
+#endif
+#ifdef IPOL_W
+	fp24 slopeW;
+#endif
+#ifdef IPOL_C0
+	sVec4 slopeC[MATERIAL_MAX_COLORS];
+#endif
+#ifdef IPOL_T0
+	sVec2 slopeT[BURNING_MATERIAL_MAX_TEXTURES];
+#endif
+#ifdef IPOL_L0
+	sVec3 slopeL[BURNING_MATERIAL_MAX_TANGENT];
+#endif
+
+	// apply top-left fill-convention, left
+	xStart = core::ceil32( line.x[0] );
+	xEnd = core::ceil32( line.x[1] ) - 1;
+
+	dx = xEnd - xStart;
+
+	if ( dx < 0 )
+		return;
+
+	// slopes
+	const f32 invDeltaX = core::reciprocal_approxim ( line.x[1] - line.x[0] );
+
+#ifdef IPOL_Z
+	slopeZ = (line.z[1] - line.z[0]) * invDeltaX;
+#endif
+#ifdef IPOL_W
+	slopeW = (line.w[1] - line.w[0]) * invDeltaX;
+#endif
+#ifdef IPOL_C0
+	slopeC[0] = (line.c[0][1] - line.c[0][0]) * invDeltaX;
+#endif
+#ifdef IPOL_T0
+	slopeT[0] = (line.t[0][1] - line.t[0][0]) * invDeltaX;
+#endif
+#ifdef IPOL_T1
+	slopeT[1] = (line.t[1][1] - line.t[1][0]) * invDeltaX;
+#endif
+#ifdef IPOL_T2
+	slopeT[2] = (line.t[2][1] - line.t[2][0]) * invDeltaX;
+#endif
+#ifdef IPOL_L0
+	slopeL[0] = (line.l[0][1] - line.l[0][0]) * invDeltaX;
+#endif
+
+#ifdef SUBTEXEL
+	subPixel = ( (f32) xStart ) - line.x[0];
+#ifdef IPOL_Z
+	line.z[0] += slopeZ * subPixel;
+#endif
+#ifdef IPOL_W
+	line.w[0] += slopeW * subPixel;
+#endif
+#ifdef IPOL_C0
+	line.c[0][0] += slopeC[0] * subPixel;
+#endif
+#ifdef IPOL_T0
+	line.t[0][0] += slopeT[0] * subPixel;
+#endif
+#ifdef IPOL_T1
+	line.t[1][0] += slopeT[1] * subPixel;
+#endif
+#ifdef IPOL_T2
+	line.t[2][0] += slopeT[2] * subPixel;
+#endif
+#ifdef IPOL_L0
+	line.l[0][0] += slopeL[0] * subPixel;
+#endif
+#endif
+
+	//dst = (tVideoSample*)RenderTarget->lock() + ( line.y * RenderTarget->getDimension().Width ) + xStart;
+
+#ifdef USE_ZBUFFER
+	z = (fp24*) DepthBuffer->lock() + ( line.y * RenderTarget->getDimension().Width ) + xStart;
+#endif
+
+#ifdef USE_SBUFFER
+	stencil = (u32*) Stencil->lock() + ( line.y * RenderTarget->getDimension().Width ) + xStart;
+#endif
+
+
 #ifdef INVERSE_W
-			inversew = fix_inverse32 ( line.w[0] );
-
-#else
-
+	f32 inversew;
 #endif
 
-			dst[i] = 0xFFFFFFFF;
 
-#ifdef WRITE_Z
-			z[i] = line.z[0];
+#ifdef IPOL_C0
+	tFixPoint r3, g3, b3;
 #endif
-#ifdef WRITE_W
-			z[i] = line.w[0];
+
+	for ( s32 i = 0; i <= dx; i++ )
+	{
+#ifdef CMP_Z
+		if ( line.z[0] < z[i] )
 #endif
+#ifdef CMP_W
+		if ( line.w[0] < z[i] )
+#endif
+		{
+			// zfail
+			stencil[i] += 1;
 		}
 
 #ifdef IPOL_Z
@@ -485,7 +654,7 @@ void CTRStencilShadow::drawTriangle ( const s4DVertex *a,const s4DVertex *b,cons
 #endif
 
 			// render a scanline
-			scanline ();
+			(this->*fragmentShader) ();
 
 			scan.x[0] += scan.slopeX[0];
 			scan.x[1] += scan.slopeX[1];
@@ -693,7 +862,7 @@ void CTRStencilShadow::drawTriangle ( const s4DVertex *a,const s4DVertex *b,cons
 #endif
 
 			// render a scanline
-			scanline ();
+			(this->*fragmentShader) ();
 
 			scan.x[0] += scan.slopeX[0];
 			scan.x[1] += scan.slopeX[1];
